# cmake_templates

./: .gitignore  readme
chapter5-1_GmockCMake/: CTestTestfile.cmake
chapter5-1_GmockCMake/Testing/Temporary/: CTestCostData.txt
chapter5-1_GmockCMake/ToDoCore/: CTestTestfile.cmake
chapter5-1_GmockCMake/ToDoCore/unit_test/: CMakeLists.txt  CTestTestfile.cmake
chapter5-1_GmockCMake/gmock/: CTestTestfile.cmake
chapter5-1_GmockCMake/gmock/gtest/: CTestTestfile.cmake
cmake_tutorial/: CMakeLists.txt  tutorial.cxx  uninstall.sh
cmake_tutorial/MathFunctions/: mysqrt.cxx  mysqrt.h
cuda_lib_unittest/unit_test/gmock/gmock-1.7.0/: CTestTestfile.cmake
cuda_lib_unittest/unit_test/gmock/gmock-1.7.0/gtest/: CTestTestfile.cmake
cuda_multiple_objs/: CMakeLists.txt
doxygen_dev/: Doxyfile
integrate_libs/: CMakeLists.txt
integrate_libs/src/: CMakeLists.txt  main.cc
integrate_libs/src/hello/: CMakeLists.txt  hello.cc  hello.h
integrate_libs/src/world/: CMakeLists.txt  world.cc  world.h
unitest/: CMakeLists.txt  clean_cmake.sh
unitest/src/: CMakeLists.txt  ToDo.cpp  ToDo.h  compute.cpp  compute.h  main.cpp
unitest/unit_test/: CMakeLists.txt  example_test.cpp
unitest/unit_test/gmock/gmock-1.7.0/: CTestTestfile.cmake
unitest/unit_test/gmock/gmock-1.7.0/gtest/: CTestTestfile.cmake
